Added footer and header. Closes #4

--- a/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
+++ b/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
@@ -10,28 +10,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">EcoEnergyPartTwo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav>
+            <div>
+                <a asp-area="" asp-page="/Index">Home</a>
+                <a asp-area="" asp-page="/Simulations">Simulacions</a>
+                <a asp-area="" asp-page="/WaterCon">Consums d'aigua</a>
+                <a asp-area="" asp-page="/EnergyInd">Indicadors energètics</a>
             </div>
         </nav>
+        <img alt="logo" src="~/Resources/Images/logo.png" width="110" height="110" />
     </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+    <footer>
+        <p>Desenvolupat per Laura Zaporta Poblet</p>
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
