Home page created. Closes #3

--- a/EcoEnergyPartTwo/Pages/Index.cshtml
+++ b/EcoEnergyPartTwo/Pages/Index.cshtml
@@ -4,7 +4,29 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="EcoHome">
+    <img id="EcoCity" alt="EcoEnergy" src="~/Resources/Images/image.png"/>
+    <section id="EcoInfo">
+        <h1>EcoEnergy Solutions</h1>
+        <p>
+            Lorem ipsum odor amet, consectetuer adipiscing elit. Montes libero purus; dis netus egestas sapien? Primis netus hac magna donec diam sodales,
+            tincidunt primis! Montes blandit montes sapien aptent sociosqu scelerisque class mauris commodo. Aliquet curabitur venenatis egestas bibendum
+            ullamcorper etiam metus semper. Dapibus hac suspendisse venenatis cras neque morbi? Ullamcorper luctus nibh consectetur commodo elit phasellus etiam.
+        </p>
+        <p>
+            Est lobortis at leo turpis fermentum enim! Curae porttitor elementum tellus torquent magna eget posuere dolor. Bibendum interdum habitant penatibus
+            netus mollis class quisque litora dignissim! Molestie vitae conubia orci nulla nisi nascetur. Ligula condimentum conubia est donec class aliquet?
+            Fringilla eget enim himenaeos sodales inceptos.
+        </p>
+        <p>
+            Fames dolor hac conubia facilisis elementum. Dapibus elit vivamus laoreet finibus tempor eget sollicitudin ad. Ac amet erat commodo convallis
+            lorem dictum sem suspendisse parturient. Ac natoque nostra suspendisse euismod nunc a cras. Nisl adipiscing quam maecenas sodales aliquet convallis
+            gravida maximus. Platea taciti non condimentum vestibulum quisque fames! Rutrum suspendisse mattis tortor tristique, adipiscing taciti dignissim.
+        </p>
+            Et pharetra semper ridiculus dapibus; odio auctor platea lorem. Nostra ipsum sagittis convallis per vulputate enim ac erat. Metus rhoncus luctus
+            nibh diam ex suspendisse. Eu etiam cubilia maecenas odio, mattis interdum nullam aptent. Nam viverra phasellus molestie quam rhoncus et. Eu molestie
+            posuere condimentum, viverra magnis condimentum lacinia cubilia. Commodo taciti nostra commodo faucibus dapibus fames; facilisis maecenas ac? Dolor
+            sit blandit maximus himenaeos nec lobortis. Malesuada leo nascetur urna leo justo est dignissim dictumst nostra.
+        </p>
+    </section>
 </div>
