--- a/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
+++ b/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
         </main>
     </div>
     <footer>
-        <p>Desenvolupat per Laura Zaporta Poblet</p>
+        <p>Desenvolupat per Laura Zaporta Poblet --- DAMv1 2025</p>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
