--- a/EcoEnergyPartTwo/wwwroot/css/site.css
+++ b/EcoEnergyPartTwo/wwwroot/css/site.css
@@ -13,8 +13,8 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 html, body {
     height: 100%;
@@ -26,6 +26,7 @@ body {
 }
 main {
     flex: 1;
+    display: block;
 }
 body {
     margin-bottom: 0;
@@ -35,7 +36,7 @@ body {
 header {
     background-image: url("../Resources/Images/banner_image.jpg");
     background-position: top;
-    height: 150px;
+    min-height: 150px;
     width: 100%;
     border-bottom: solid darkgreen 5px;
     display: flex;
@@ -43,6 +44,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-right: 25px;
+    padding-left: 25px;
+    border-radius: 20px;
 }
 header nav {
     display: flex;
@@ -63,7 +66,7 @@ header nav a:hover {
 footer {
     background-image: url("../Resources/Images/banner_image.jpg");
     background-position: center;
-    height: 100px;
+    min-height: 100px;
     width: 100%;
     border-top: solid darkgreen 5px;
     margin-top: auto;
@@ -73,8 +76,35 @@ footer {
     justify-content: center;
     align-items: center;
     padding-left: 30px;
+    border-radius: 20px;
 }
-footer p{
+
+footer p {
     position: relative;
-    top: 5px;
+    top: 7px;
+}
+
+/*IMAGES*/
+img {
+    border-radius: 20px;
+}
+#EcoCity {
+    width: 50%;
+}
+
+/*HOME PAGE*/
+#EcoHome {
+    padding-top: 50px;
+    padding-bottom: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#EcoInfo {
+    padding-left: 50px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+#EcoInfo h1 {
+    padding-bottom: 30px;
 }
