Pages organized in folders.

--- a/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
+++ b/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
         <nav>
             <div>
                 <a asp-area="" asp-page="/Index">Home</a>
-                <a asp-area="" asp-page="/Simulations">Simulacions</a>
-                <a asp-area="" asp-page="/WaterCon">Consums d'aigua</a>
-                <a asp-area="" asp-page="/EnergyInd">Indicadors energètics</a>
+                <a asp-area="" asp-page="/Simulations/Simulations">Simulacions</a>
+                <a asp-area="" asp-page="/WaterCon/WaterCon">Consums d'aigua</a>
+                <a asp-area="" asp-page="/EnergyInd/EnergyInd">Indicadors energètics</a>
             </div>
         </nav>
         <img alt="logo" src="~/Resources/Images/logo.png" width="110" height="110" />
