--- a/EcoEnergyPartTwo/Pages/Simulations/Simulations.cshtml
+++ b/EcoEnergyPartTwo/Pages/Simulations/Simulations.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Simulations";
 }
 
 <div class="text-center">
-    <h1 class="display-4">AAAAAAAAAAAAAAAA</h1>
+    <h1 class="display-4">Simulacions</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
