--- a/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
+++ b/EcoEnergyPartTwo/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav>
             <div>
                 <a asp-area="" asp-page="/Index">Home</a>
-                <a asp-area="" asp-page="/Simulations/AddSimulation">Simulacions</a>
+                <a asp-area="" asp-page="/Simulations/Simulations">Simulacions</a>
                 <a asp-area="" asp-page="/WaterCon/WaterCon">Consums d'aigua</a>
                 <a asp-area="" asp-page="/EnergyInd/EnergyInd">Indicadors energètics</a>
             </div>
@@ -32,6 +32,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation-unobtrusive@4.0.0/jquery.validate.unobtrusive.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
