--- a/EcoEnergyPartTwo/Pages/Simulations/Simulations.cshtml
+++ b/EcoEnergyPartTwo/Pages/Simulations/Simulations.cshtml
@@ -37,5 +37,5 @@
             }
         </tbody>
     </table>
-    <button onclick="window.location.href='/Simulations/AddSimulation'">Afegir Simulació</button>
+    <button onclick="window.location.href='/Simulations/AddSimulation'" class="ButtonLeft">Afegir Simulació</button>
 </div>
