--- a/EcoEnergyPartTwo/wwwroot/css/site.css
+++ b/EcoEnergyPartTwo/wwwroot/css/site.css
@@ -124,8 +124,19 @@ img {
 #WaterConList {
     padding-top: 50px;
 }
+#WaterConList.table{
+    word-wrap: break-word;
+}
+#WaterConList button{
+    margin-bottom: 30px;
+}
 .Statistics {
     padding-top: 50px;
+    overflow-x: auto;
+    word-wrap: break-word;
+}
+.Statistics h4{
+    padding-bottom: 10px;
 }
 #LastStatistic {
     padding-bottom: 50px;
@@ -167,4 +178,31 @@ img {
     background-color: DarkGreen;
     color: white;
     transition: background-color 0.25s, border 0.05s, color 0.05s;
+}
+
+/* ENERGY INDICATORS*/
+#EnergyIndList {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.SlideTable {
+    overflow-x: auto;
+}
+#EnergyIndList button {
+    margin-bottom: 30px;
+}
+#EnergyIndList.table {
+    width: 100%;
+    table-layout: fixed;
+    word-wrap: break-word;
+    border-bottom: 1px solid #000;
+}
+table th, table td {
+    padding: 8px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+table thead {
+    border-bottom: 2px solid #000;
 }
